--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ You can install the development version of ModelOptimizationIR like so:
 
 ``` r
 install(devtools)
-devtools::install_github(anibalsilva1/ModelOptimizationIR)
+devtools::install_github("anibalsilva1/ModelOptimizationIR")
 ```
 
 ## Example
@@ -44,14 +44,38 @@ formula <- LNO2 ~ .
 train <- NO2Emissions %>% slice(s)
 test <- NO2Emissions %>% slice(-s)
 
-trues <- train$LNO2
-phi <- phi(trues)
+p.ctrl <- phi.control(train$LNO2)
 steps <- seq(0, 1, 0.001)
-sigmas <- sigma(phi, steps)
 
 model <- rpart(formula, train)
 preds <- predict(model, test)
 
-sera <- sera_numerical(trues, preds, sigmas)
-sera
+
+trues <- test$LNO2
+
+phi <- phi(trues, p.ctrl)
+sigma <- sigma(phi, steps)
+
+
+sera_num <- sera_numerical(trues=trues, preds=preds, sigmas=sigma)
+sera_num
+
+sera_trap <- sera(trues=trues, preds=preds, phi.trues=phi)
+sera_trap
+
+
+```
+
+## Citation
+
+```bib
+@misc{https://doi.org/10.48550/arxiv.2206.09991,
+  doi = {10.48550/ARXIV.2206.09991},
+  url = {https://arxiv.org/abs/2206.09991},
+  author = {Silva, Aníbal and Ribeiro, Rita P. and Moniz, Nuno},
+  title = {Model Optimization in Imbalanced Regression},
+  publisher = {arXiv},
+  year = {2022},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
 ```
